--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <a href="/">Accueil</a>
+    <a href="/">Accueiltest</a>
     <a href="/blog">Blog</a>
     <a href="/about">À Propos</a>
     <!-- Ajoutez d'autres liens ou éléments de navigation selon vos besoins -->
